--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         .bg-image {
             /* A imagem de fundo ocupará toda a tela */
-            background-image: url('sua-imagem.jpg');
+            background-image: url('foto.jpg');
             height: 100%; 
             background-position: center;
             background-repeat: no-repeat;
