--- a/celular/index.html
+++ b/celular/index.html
@@ -10,6 +10,7 @@
             padding: 0;
             height: 100%;
             font-family: Arial, sans-serif;
+            background-color: transparent; /* Torna o fundo do body transparente */
         }
 
         .container {
@@ -19,7 +20,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: #f0f0f0;
+            background-color: transparent; /* Torna o fundo do container transparente */
         }
 
         .phone {
@@ -31,6 +32,7 @@
         .phone img {
             width: 100%;
             height: auto;
+            display: block;
         }
 
         .background {
@@ -40,6 +42,7 @@
             top: 0;
             left: 0;
             visibility: hidden;
+            background-color: rgba(0, 0, 0, 0); /* Torna o fundo da imagem transparente */
         }
 
         .web-view {
@@ -49,6 +52,7 @@
             top: 0;
             left: 0;
             visibility: hidden;
+            background-color: rgba(0, 0, 0, 0); /* Torna o fundo do WebView transparente */
         }
 
         .button {
