--- a/cef/index.html
+++ b/cef/index.html
@@ -3,26 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dialog Example</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Notificações</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="styles.css"> <!-- Link para seu CSS -->
 </head>
 <body>
-    <div id="dialog-overlay" class="hidden">
-        <div class="dialog-box">
-            <div class="dialog-header">
-                <h2>Confirmation</h2>
-                <span id="close-dialog" class="close-btn">&times;</span>
-            </div>
-            <div class="dialog-body">
-                <p>Are you sure you want to proceed?</p>
-            </div>
-            <div class="dialog-footer">
-                <button id="yes-button" class="yes-btn">Yes</button>
-                <button id="no-button" class="no-btn">No</button>
-            </div>
-        </div>
-    </div>
-    <button id="open-dialog" class="open-dialog-btn">Open Dialog</button>
-    <script src="script.js"></script>
+    <div class="notify-wrapper"></div>
+    <script src="script.js"></script> <!-- Link para seu JavaScript -->
 </body>
 </html>
