--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: #f0f0f0; /* Cor de fundo */
+            background-color: transparent; /* Cor de fundo */
         }
 
         .container {
